; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_get_job_lock_for_delete.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_get_job_lock_for_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32, i64 }

@AccessExclusiveLock = common dso_local global i32 0, align 4
@NOTICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"cancelling the background worker for job %d (pid %d)\00", align 1
@pg_cancel_backend = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @get_job_lock_for_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_job_lock_for_delete(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @AccessExclusiveLock, align 4
  %9 = call i32 @lock_job(i32 %7, i32 %8, i32 0, i32* %3, i32 0)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %50, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @AccessExclusiveLock, align 4
  %14 = call %struct.TYPE_6__* @GetLockConflicts(i32* %3, i32 %13)
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %5, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @VirtualTransactionIdIsValid(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %46

20:                                               ; preds = %12
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call %struct.TYPE_7__* @BackendIdGetProc(i32 %23)
  store %struct.TYPE_7__* %24, %struct.TYPE_7__** %6, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %26 = icmp ne %struct.TYPE_7__* %25, null
  br i1 %26, label %27, label %45

27:                                               ; preds = %20
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %45

32:                                               ; preds = %27
  %33 = load i32, i32* @NOTICE, align 4
  %34 = load i32, i32* %2, align 4
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @elog(i32 %33, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %34, i32 %37)
  %39 = load i32, i32* @pg_cancel_backend, align 4
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @Int32GetDatum(i32 %42)
  %44 = call i32 @DirectFunctionCall1(i32 %39, i32 %43)
  br label %45

45:                                               ; preds = %32, %27, %20
  br label %46

46:                                               ; preds = %45, %12
  %47 = load i32, i32* %2, align 4
  %48 = load i32, i32* @AccessExclusiveLock, align 4
  %49 = call i32 @lock_job(i32 %47, i32 %48, i32 0, i32* %3, i32 1)
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %46, %1
  %51 = load i32, i32* %4, align 4
  %52 = call i32 @Assert(i32 %51)
  ret void
}

declare dso_local i32 @lock_job(i32, i32, i32, i32*, i32) #1

declare dso_local %struct.TYPE_6__* @GetLockConflicts(i32*, i32) #1

declare dso_local i64 @VirtualTransactionIdIsValid(i32) #1

declare dso_local %struct.TYPE_7__* @BackendIdGetProc(i32) #1

declare dso_local i32 @elog(i32, i8*, i32, i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
